# DTU-HPC-CLI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
dtu_hpc_cli/: __init__.py  client.py  config.py  constants.py  get_command.py  history.py  install.py  list.py  paths.py  queues.py  remove.py  resubmit.py  run.py  submit.py  sync.py  types.py
dtu_hpc_cli/client/: __init__.py  base.py  local.py  ssh.py
