[tool.poetry]
name = "dtu-hpc-cli"
version = "0.1.0"
description = ""
authors = ["Christoffer Koo Øhrstrøm <2357447+ChrisFugl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
