[tool.poetry]
name = "dtu-hpc-cli"
version = "1.0.0"
description = ""
authors = ["Christoffer Koo Øhrstrøm <2357447+ChrisFugl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dtu-hpc = "dtu_hpc_cli:cli"